# jobs-data-pipeline

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.github/workflows/: pipeline.yml
analytics/: __init__.py  gold_jobs.py
docs/: architecture.drawio
ingestion/: extract_jobs.py
transform/: __init__.py  transform_jobs.py
utils/: __init__.py
